src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>npsp__Notification_Recipient_Name__c</fullName>
        <description>The name that the donor provided of the person you should notify about this Donation. If this field is left blank and the Notification Recipient Contact field contains a value, NPSP automatically populates this field with that value.</description>
        <inlineHelpText>The name that the donor provided of the person you should notify about this Donation. If this field is left blank and the Notification Recipient Contact field contains a value, NPSP automatically populates this field with that value.</inlineHelpText>
        <label>Notification Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Previous_Grant_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this Grant is a renewal of a previous Grant, use this field to relate this record to the previous Grant.</description>
        <inlineHelpText>If this Grant is a renewal of a previous Grant, use this field to relate this record to the previous Grant.</inlineHelpText>
        <label>Previous Grant/Gift Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Grants/Gifts</relationshipLabel>
        <relationshipName>Previous_Grant_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Contact_Campaign_Member_Status__c</fullName>
        <description>The status NPSP uses when it creates a Campaign Member for this Opportunity&apos;s Primary Contact and Primary Campaign Source. Leave blank to default to a responded status for Closed/Won Opportunities, and a non-responded status for other Opportunities.</description>
        <inlineHelpText>The status NPSP uses when it creates a Campaign Member for this Opportunity&apos;s Primary Contact and Primary Campaign Source. Leave blank to default to a responded status for Closed/Won Opportunities, and a non-responded status for other Opportunities.</inlineHelpText>
        <label>Primary Contact Campaign Member Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Primary Contact for this Opportunity. If this is an individual Donation, NPSP attributes the Donation to the Primary Contact. If this is an organizational Donation, NPSP attributes a soft credit to the Primary Contact.</description>
        <inlineHelpText>The Primary Contact for this Opportunity. If this is an individual Donation, NPSP attributes the Donation to the Primary Contact. If this is an organizational Donation, NPSP attributes a soft credit to the Primary Contact.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Qualified_Date__c</fullName>
        <description>The date your organization identified this donor as qualifying for this Donation.</description>
        <inlineHelpText>The date your organization identified this donor as qualifying for this Donation.</inlineHelpText>
        <label>Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Recurring_Donation_Installment_Name__c</fullName>
        <description>The installment name for inclusion in Opportunity naming. Shows the installment number in parentheses for open ended Recurring Donations, or the installment number out of the total for Recurring Donations with a set number of installments.</description>
        <formula>IF(
ISBLANK(npe03__Recurring_Donation__c),
&apos;&apos;,
  IF(
    OR(ISPICKVAL(npe03__Recurring_Donation__r.npe03__Open_Ended_Status__c, &apos;Open&apos;),ISPICKVAL(npe03__Recurring_Donation__r.npe03__Open_Ended_Status__c, &apos;Closed&apos;),ISBLANK(npe03__Recurring_Donation__r.npe03__Installments__c)),
    &apos;(&apos;&amp;TEXT(npsp__Recurring_Donation_Installment_Number__c)&amp;&apos;)&apos;,
    &apos;(&apos;&amp;TEXT(npsp__Recurring_Donation_Installment_Number__c)&amp;&apos; &apos;&amp;$Label.npsp__oppInstallmentsOf&amp;&apos; &apos;&amp;TEXT(npe03__Recurring_Donation__r.npe03__Installments__c)&amp;&apos;)&apos;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The installment name for inclusion in Opportunity naming. Shows the installment number in parentheses for open ended Recurring Donations, or the installment number out of the total for Recurring Donations with a set number of installments.</inlineHelpText>
        <label>Recurring Donation Installment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Recurring_Donation_Installment_Number__c</fullName>
        <description>The installment number of this Opportunity&apos;s Recurring Donation schedule.</description>
        <inlineHelpText>The installment number of this Opportunity&apos;s Recurring Donation schedule.</inlineHelpText>
        <label>Recurring Donation Installment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Requested_Amount__c</fullName>
        <description>The amount you are requesting. This number might be different from the final award amount.</description>
        <inlineHelpText>The amount you are requesting. This number might be different from the final award amount.</inlineHelpText>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Tribute_Notification_Date__c</fullName>
        <description>The date when a notification about this tribute gift was sent.</description>
        <label>Tribute Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Tribute_Notification_Status__c</fullName>
        <description>Indicates whether a notification&apos;s been sent for this tribute gift.</description>
        <label>Tribute Notification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Be Notified</fullName>
                </value>
                <value>
                    <fullName>Notified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Tribute_Type__c</fullName>
        <description>Indicates whether the Donation is in honor or in memory of an individual.</description>
        <inlineHelpText>Indicates whether the Donation is in honor or in memory of an individual.</inlineHelpText>
        <label>Tribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Honor</fullName>
                </value>
                <value>
                    <fullName>Memorial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <listViews>
        <fullName>npsp__To_Be_Acknowledged</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>npsp__Primary_Contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>npsp__Acknowledgment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Acknowledgment_Status__c</field>
            <operation>equals</operation>
            <value>To Be Acknowledged,Email Acknowledgment Not Sent</value>
        </filters>
        <label>To Be Acknowledged</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>NPSP_Default</fullName>
        <active>true</active>
        <businessProcess>NPSP_Default</businessProcess>
        <label>NPSP Default</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>